# bionic_hand

./: .gitignore  comman_comands  run_hand.desktop  run_hand.sh
servo_mapper/src/: servo_mapper_node.cpp
src/hand_description/: CMakeLists.txt  package.xml
src/hand_description/launch/: display.launch.py
src/hand_description/meshes/: base_link.STL  index_dip.STL  index_mcp_adduction.STL  index_pip.STL  mcp_flexion.STL  middle_dip.STL  middle_mcp_adduction.STL  middle_mcp_flexion.STL  middle_pip.STL  ring_dip.STL  ring_mcp_adduction.STL  ring_mcp_flexion.STL  ring_pip.STL  thumb.STL  thumb_dip.STL  thumb_mcp_flexion.STL  thumb_opposition.STL  thumb_pip.STL  thumb_rotation.STL
src/hand_description/src/: urdf_publisher.py
src/hand_description/urdf/: urdf.xacro
src/launch_everything/: CMakeLists.txt  package.xml
src/launch_everything/launch/: complete_hand.launch.py
src/leap_node/: CMakeLists.txt  package.xml
src/leap_node/msg/: BoneData.msg  FingerData.msg  HandData.msg
src/leap_node/src/: DOF_publisher_node.cpp  Sample.cpp
src/servo_mapper/: CMakeLists.txt  package.xml
src/servo_mapper/src/: servo_mapper_node.cpp
